<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/notificationFragment"
        android:title="@string/notification"
        android:icon="@drawable/ic_baseline_notifications_24"/>
    <item
        android:id="@+id/searchFragment"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"/>
    <item
        android:id="@+id/basketFragment"
        android:title="@string/basket"
        android:icon="@drawable/ic_baseline_shopping_basket_24"/>
    <item
        android:id="@+id/moreActionsFragment"
        android:title="@string/moreActions"
        android:icon="@drawable/ic_baseline_more_vert_24"/>
</menu>