<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_scroll_notifications"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/parent_constraint_layout_notifications"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="2dp"
        android:paddingTop="4dp"
        android:paddingEnd="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_choco_bg"
            android:layout_width="match_parent"
            android:layout_height="590dp"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_pointer_down"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/pointer_down"
                android:elevation="5dp"
                app:layout_constraintStart_toStartOf="@+id/cl_choco_bg"
                app:layout_constraintTop_toTopOf="@+id/cl_choco_bg" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_notification_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/chocolate_notify"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                app:cardCornerRadius="38dp"
                app:cardElevation="3dp"
                app:layout_constraintBottom_toBottomOf="@+id/cl_choco_bg"
                app:layout_constraintEnd_toEndOf="@+id/cl_choco_bg">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/notify_like2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/ic_notify_like" />

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_biscuits_type_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/biscuits"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_biscuits_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/biscuits"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_biscuits_prize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:text="@string/prize_amd"
            android:textColor="#E2066D"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_biscuits_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_ingredients_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/ingredients_name"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/ingredients"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_shelf_life_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/shelf_life"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tv_shelf_life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="60dp"
            android:text="@string/months"
            android:textSize="12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>